fixed logo and page redirect

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 <body>
     <!-- Header -->
     <header>
-        <span class="Creator">Akki</span>
-        <a href="/" class="logo"><img src="/images/Routex.png" alt="logo" /></a>
+        <span class="Creator"></span>
+        <a href="/" class="logo"><img src="images/Routex.png" alt="logo" /></a>
         <a href="#" class="menu" onclick="toggleMenu();"></a>
     </header>
     <div class="banner">
         <ul class="nav">
             <li><a href="/">Home</a></li>
-            <li><a href="/car.html">Our Cars</a></li>
-            <li><a href="/blog.html">Blog</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="car.html">Our Cars</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="bg-video-list">
             <video autoplay muted loop class="bg-video RouteX-1 active" src="./assets/RouteX-1.mp4">
