Added more content on Home page and fixed Footer in all pages

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="css/footer.css">
     <title>RouteX | Car Booking Website</title>
 </head>
 
@@ -19,7 +20,7 @@
     </header>
     <div class="banner">
         <ul class="nav">
-            <li><a href="/">Home</a></li>
+            <li><a href="">Home</a></li>
             <li><a href="car.html">Our Cars</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
@@ -86,10 +87,10 @@
         <div class="car-card">
             <div class="car-image">
                 <img src="./images/car-3.jpg" alt="Mercedes Grand Sedan">
-                <div class="price-tag">
+                <!-- <div class="price-tag">
                     <span class="amount">₹25</span>
                     <span class="per-day">FROM /DAY</span>
-                </div>
+                </div> -->
             </div>
             <div class="car-info">
                 <h4>Mercedes Grand Sedan</h4>
@@ -104,10 +105,10 @@
         <div class="car-card">
             <div class="car-image">
                 <img src="./images/car-4.jpg" alt="Range Rover">
-                <div class="price-tag">
+                <!-- <div class="price-tag">
                     <span class="amount">₹25</span>
                     <span class="per-day">FROM /DAY</span>
-                </div>
+                </div> -->
             </div>
             <div class="car-info">
                 <h4>Mercedes Grand Sedan</h4>
@@ -122,10 +123,10 @@
         <div class="car-card">
             <div class="car-image">
                 <img src="./images/car-5.jpg" alt="Audi Blue">
-                <div class="price-tag">
+                <!-- <div class="price-tag">
                     <span class="amount">₹25</span>
                     <span class="per-day">FROM /DAY</span>
-                </div>
+                </div> -->
             </div>
             <div class="car-info">
                 <h4>Mercedes Grand Sedan</h4>
@@ -140,10 +141,10 @@
         <div class="car-card">
             <div class="car-image">
                 <img src="./images/car-6.jpg" alt="Mustang">
-                <div class="price-tag">
+                <!-- <div class="price-tag">
                     <span class="amount">₹25</span>
                     <span class="per-day">FROM /DAY</span>
-                </div>
+                </div> -->
             </div>
             <div class="car-info">
                 <h4>Mercedes Grand Sedan</h4>
@@ -156,6 +157,63 @@
         </div>
     </div>
 </section>
+
+<section class="section__container about__container" id="about">
+      <div class="about__image">
+        <img src="images/cars/about.png" alt="about" />
+      </div>
+      <div class="about__content">
+        <h3 class="section__subheader">CONVENIENT INTERACTION</h3>
+        <h2 class="section__header">Modern App</h2>
+        <p class="section__description">
+          At Premium Car Rental, we redefine the car rental experience in New
+          York with our unparalleled commitment to quality and luxury. Whether
+          you're exploring the city for business or leisure, Our Cars of
+          high-end vehicles ensures a sophisticated and comfortable ride.
+        </p>
+        <p class="section__description">
+          With easy booking options, competitive pricing, and dedicated customer
+          support, we strive to make every journey effortless and enjoyable
+        </p>
+        <div class="about__btn">
+          <button class="btn">
+            <span><i class="ri-apple-fill"></i></span>
+            Download App
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="fleet__container" id="car">
+      <h3 class="section__subheader">ONLY THE BEST CARS</h3>
+      <h2 class="section__header">Our Vehicle Fleet</h2>
+      <p class="section__description">
+        Explore our exclusive collection of luxury vehicles, designed to offer
+        unmatched comfort, style, and performance. From elegant sedans to
+        powerful SUVs, Our Cars is perfect for every occasion, ensuring a
+        premium driving experience in New York.
+      </p>
+      <div class="fleet__wrapper-1">
+        <div class="fleet__images">
+          <img src="images/cars/fleet-1.jpg" alt="fleet" />
+          <img src="images/cars/fleet-2.jpg" alt="fleet" />
+          <img src="images/cars/fleet-3.jpg" alt="fleet" />
+          <img src="images/cars/fleet-4.jpg" alt="fleet" />
+          <img src="images/cars/fleet-5.jpg" alt="fleet" />
+        </div>
+      </div>
+      <div class="fleet__wrapper-2">
+        <div class="fleet__images">
+          <img src="images/cars/fleet-6.jpg" alt="fleet" />
+          <img src="images/cars/fleet-7.jpg" alt="fleet" />
+          <img src="images/cars/fleet-8.jpg" alt="fleet" />
+          <img src="images/cars/fleet-9.jpg" alt="fleet" />
+          <img src="images/cars/fleet-10.jpg" alt="fleet" />
+          <img src="images/cars/fleet-11.jpg" alt="fleet" />
+          <img src="images/cars/fleet-12.jpg" alt="fleet" />
+        </div>
+      </div>
+    </section>
 
 <footer class="professional-footer">
     <!-- Newsletter Section -->
@@ -200,24 +258,24 @@
                     <p>Premium car rental service offering luxury vehicles for every journey.</p>
                 </div>
                 <div class="social-links">
-                    <a href="https://facebook.com" class="social-icon" title="Facebook" target="_blank">
+                    <a href="https://www.facebook.com/hackwithakki" class="social-icon" title="Facebook" target="_blank">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
                         </svg>
                     </a>
-                    <a href="https://twitter.com" class="social-icon" title="Twitter" target="_blank">
+                    <a href="https://x.com/hackwithakki/" class="social-icon" title="Twitter" target="_blank">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M23.953 4.57a10 10 0 002.856-9.99h-1.408a8.973 8.973 0 01-2.542 2.65l-1.447-1.573c-1.46 1.084-3.067 1.8-4.753 2.118v.5a7.25 7.25 0 01-14.5 0v-.5C1.353 4.467 0 3.14 0 1.541 0 .774.726 0 1.625 0 2.525 0 3.25.773 3.25 1.541V2a5.625 5.625 0 0011.25 0v-.5c0-1.405 1.02-2.573 2.37-2.573 1.35 0 2.44 1.168 2.44 2.573V4.57z"/>
                         </svg>
                     </a>
-                    <a href="https://instagram.com" class="social-icon" title="Instagram" target="_blank">
+                    <a href="https://instagram.com/hackwithakki/" class="social-icon" title="Instagram" target="_blank">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                             <rect x="2" y="2" width="20" height="20" rx="5" ry="5" fill="none" stroke="currentColor" stroke-width="2"/>
                             <circle cx="12" cy="12" r="3" fill="none" stroke="currentColor" stroke-width="2"/>
                             <circle cx="18" cy="6" r="1" fill="currentColor"/>
                         </svg>
                     </a>
-                    <a href="https://linkedin.com" class="social-icon" title="LinkedIn" target="_blank">
+                    <a href="https://www.linkedin.com/in/yourbihari/" class="social-icon" title="LinkedIn" target="_blank">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0z"/>
                         </svg>
@@ -231,7 +289,7 @@
                 <ul class="footer-links">
                     <li><a href="/">Home</a></li>
                     <li><a href="/about.html">About Us</a></li>
-                    <li><a href="/car.html">Our Fleet</a></li>
+                    <li><a href="/car.html">Our Cars</a></li>
                     <li><a href="/pricing.html">Pricing</a></li>
                     <li><a href="/blog.html">Blog</a></li>
                 </ul>
@@ -282,413 +340,6 @@
         </div>
     </div>
 
-    <style>
-        /* Professional Footer Styling */
-        .professional-footer {
-            background: linear-gradient(135deg, #1a1a2e 0%, #0f3460 100%);
-            color: #ecf0f1;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        /* Newsletter Section */
-        .footer-newsletter {
-            background: rgba(255, 255, 255, 0.05);
-            padding: 40px 20px;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .newsletter-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-wrap: wrap;
-            gap: 30px;
-        }
-
-        .newsletter-content h3 {
-            font-size: 24px;
-            margin-bottom: 5px;
-            color: #fff;
-            font-weight: 600;
-        }
-
-        .newsletter-content p {
-            font-size: 14px;
-            color: rgba(255, 255, 255, 0.7);
-            margin: 0;
-        }
-
-        .newsletter-form {
-            display: flex;
-            gap: 10px;
-            flex: 1;
-            min-width: 300px;
-            max-width: 400px;
-        }
-
-        .newsletter-form input {
-            flex: 1;
-            padding: 12px 16px;
-            border: none;
-            border-radius: 5px;
-            font-size: 14px;
-            background: rgba(255, 255, 255, 0.9);
-            transition: all 0.3s ease;
-        }
-
-        .newsletter-form input:focus {
-            outline: none;
-            background: #fff;
-            box-shadow: 0 0 0 3px rgba(16, 185, 129, 0.2);
-        }
-
-        .newsletter-form button {
-            padding: 12px 28px;
-            background: linear-gradient(135deg, #10b981 0%, #059669 100%);
-            color: white;
-            border: none;
-            border-radius: 5px;
-            font-weight: 600;
-            font-size: 14px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .newsletter-form button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 20px rgba(16, 185, 129, 0.3);
-        }
-
-        /* Main Footer Content */
-        .footer-main {
-            padding: 60px 20px 40px;
-            max-width: 1400px;
-            margin: 0 auto;
-        }
-
-        .footer-grid {
-            display: grid;
-            grid-template-columns: 1.2fr 1fr 1fr 1fr 1.2fr;
-            gap: 40px;
-            margin-bottom: 40px;
-        }
-
-        .footer-section h4 {
-            font-size: 18px;
-            font-weight: 600;
-            margin-bottom: 20px;
-            color: #fff;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-
-        /* Brand Section */
-        .logo-container {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            margin-bottom: 15px;
-            flex-wrap: wrap;
-        }
-
-        .brand-logo {
-            width: 60px;
-            height: 60px;
-            min-width: 60px;
-            animation: floatLogo 3s ease-in-out infinite;
-        }
-
-        @keyframes floatLogo {
-            0%, 100% { transform: translateY(0px); }
-            50% { transform: translateY(-8px); }
-        }
-
-        .logo-container h3 {
-            font-size: 28px;
-            font-weight: 700;
-            margin: 0;
-            color: #10b981;
-            letter-spacing: 1px;
-            white-space: nowrap;
-        }
-
-        .footer-brand p {
-            font-size: 14px;
-            color: rgba(255, 255, 255, 0.7);
-            line-height: 1.6;
-            margin-bottom: 25px;
-        }
-
-        /* Social Links */
-        .social-links {
-            display: flex;
-            gap: 15px;
-            margin-top: 20px;
-            flex-wrap: wrap;
-        }
-
-        .social-icon {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            width: 50px;
-            height: 50px;
-            background: rgba(16, 185, 129, 0.1);
-            border: 2px solid rgba(16, 185, 129, 0.3);
-            border-radius: 50%;
-            color: #10b981;
-            text-decoration: none;
-            transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .social-icon::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(135deg, #10b981, #059669);
-            transition: left 0.3s ease;
-            z-index: 0;
-        }
-
-        .social-icon svg {
-            width: 24px;
-            height: 24px;
-            position: relative;
-            z-index: 1;
-            transition: transform 0.3s ease;
-        }
-
-        .social-icon:hover {
-            color: #fff;
-            transform: translateY(-6px) scale(1.15);
-            border-color: #10b981;
-            box-shadow: 0 12px 30px rgba(16, 185, 129, 0.5);
-        }
-
-        .social-icon:hover::before {
-            left: 0;
-        }
-
-        .social-icon:hover svg {
-            transform: rotate(15deg) scale(1.1);
-        }
-
-        /* Footer Links */
-        .footer-links {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .footer-links li {
-            margin-bottom: 12px;
-        }
-
-        .footer-links a {
-            color: rgba(255, 255, 255, 0.7);
-            text-decoration: none;
-            font-size: 14px;
-            transition: all 0.3s ease;
-            display: inline-flex;
-            align-items: center;
-        }
-
-        .footer-links a:hover {
-            color: #10b981;
-            transform: translateX(5px);
-        }
-
-        /* Contact Info */
-        .contact-info p {
-            font-size: 14px;
-            color: rgba(255, 255, 255, 0.7);
-            margin-bottom: 15px;
-            line-height: 1.6;
-            display: flex;
-            align-items: flex-start;
-            gap: 12px;
-        }
-
-        .contact-info .icon {
-            font-size: 16px;
-            min-width: 20px;
-        }
-
-        .contact-info a {
-            color: #10b981;
-            text-decoration: none;
-            transition: all 0.3s ease;
-        }
-
-        .contact-info a:hover {
-            color: #059669;
-            text-decoration: underline;
-        }
-
-        /* Footer Bottom */
-        .footer-bottom {
-            background: rgba(0, 0, 0, 0.3);
-            padding: 30px 20px;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .footer-bottom-content {
-            max-width: 1400px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-wrap: wrap;
-            gap: 20px;
-            text-align: center;
-        }
-
-        .footer-bottom-content p {
-            font-size: 13px;
-            color: rgba(255, 255, 255, 0.6);
-            margin: 0;
-        }
-
-        .footer-bottom-content a {
-            color: #10b981;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        .footer-bottom-content a:hover {
-            color: #059669;
-            text-decoration: underline;
-        }
-
-        .heart {
-            animation: heartbeat 1s infinite;
-        }
-
-        @keyframes heartbeat {
-            0%, 100% { transform: scale(1); }
-            50% { transform: scale(1.2); }
-        }
-
-        /* Responsive Design */
-        @media (max-width: 1200px) {
-            .footer-grid {
-                grid-template-columns: repeat(3, 1fr);
-                gap: 30px;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .footer-grid {
-                grid-template-columns: 1fr;
-                gap: 30px;
-                text-align: center;
-            }
-
-            .newsletter-container {
-                flex-direction: column;
-                text-align: center;
-            }
-
-            .newsletter-form {
-                max-width: 100%;
-                flex-direction: column;
-            }
-
-            .footer-links a {
-                justify-content: center;
-            }
-
-            .contact-info p {
-                justify-content: center;
-            }
-
-            .social-links {
-                justify-content: center;
-            }
-
-            .footer-bottom-content {
-                flex-direction: column;
-                text-align: center;
-            }
-
-            .logo-container {
-                justify-content: center;
-                margin-bottom: 20px;
-            }
-
-            .brand-logo {
-                width: 55px;
-                height: 55px;
-            }
-
-            .logo-container h3 {
-                font-size: 26px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .footer-grid {
-                grid-template-columns: 1fr;
-                gap: 20px;
-            }
-
-            .brand-logo {
-                width: 50px;
-                height: 50px;
-            }
-
-            .logo-container h3 {
-                font-size: 22px;
-            }
-
-            .footer-brand p {
-                font-size: 13px;
-            }
-
-            .newsletter-content h3 {
-                font-size: 20px;
-            }
-
-            .newsletter-content p {
-                font-size: 12px;
-            }
-
-            .social-icon {
-                width: 45px;
-                height: 45px;
-            }
-
-            .social-icon svg {
-                width: 20px;
-                height: 20px;
-            }
-
-            .footer-section h4 {
-                font-size: 16px;
-                margin-bottom: 15px;
-            }
-
-            .footer-links li {
-                margin-bottom: 10px;
-            }
-
-            .footer-links a {
-                font-size: 13px;
-            }
-
-            .contact-info p {
-                font-size: 12px;
-                margin-bottom: 12px;
-            }
-        }
-    </style>
 </footer>
 
 
