--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </header>
     <div class="banner">
         <ul class="nav">
-            <li><a href="">Home</a></li>
+            <li><a href="" style="color: #00c2de;">Home</a></li>
             <li><a href="car.html">Our Cars</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="luxury.html">Luxury Cars</a></li>
+            <!-- <li><a href="about.html">About</a></li> -->
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="bg-video-list">
