Added indian transports as our cars

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="banner">
         <ul class="nav">
             <li><a href="" style="color: #00c2de;">Home</a></li>
-            <li><a href="car.html">Our Cars</a></li>
+            <li><a href="our-cars.html">Our Cars</a></li>
             <li><a href="luxury.html">Luxury Cars</a></li>
             <!-- <li><a href="about.html">About</a></li> -->
             <li><a href="contact.html">Contact</a></li>
