Added 2 more cards in pages

--- a/luxury.html
+++ b/luxury.html
@@ -733,6 +733,20 @@
                     <h3>Secure Booking</h3>
                     <p>Safe and encrypted payment processing</p>
                 </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <i class="fas fa-clock"></i>
+                    </div>
+                    <h3>Flexible Booking</h3>
+                    <p>Instant confirmation and flexible cancellation options available</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <i class="fas fa-award"></i>
+                    </div>
+                    <h3>Award-Winning Fleet</h3>
+                    <p>Premium collection of internationally recognized luxury vehicles</p>
+                </div>
             </div>
         </div>
     </section>
