--- a/our-cars.html
+++ b/our-cars.html
@@ -732,6 +732,20 @@
                     <h3>Secure Booking</h3>
                     <p>Safe, encrypted transactions with flexible payment options</p>
                 </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <i class="fas fa-road"></i>
+                    </div>
+                    <h3>Pan-India Coverage</h3>
+                    <p>Available across all major Indian cities and highways</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <i class="fas fa-leaf"></i>
+                    </div>
+                    <h3>Eco-Friendly Options</h3>
+                    <p>Wide selection of fuel-efficient and electric vehicles</p>
+                </div>
             </div>
         </div>
     </section>
